<resources>
  <string name="app_name">SlamZoom</string>

  <string name="hotspot_chooser_title">pinch to zoom</string>
  <string name="hotspot_chooser_hint">tip: faces make dank memes</string>

  <!-- Effect Names -->
  <string name="slamin">slamin</string>
  <string name="slamout">slamout</string>
  <string name="crashblur">crashblur</string>
  <string name="rumblestiltskin">rumblestiltskin</string>
  <string name="throwback">throwback</string>
  <string name="flashreveal">flashreveal</string>
  <string name="rumbleslam">rumbleslam</string>
  <string name="flushslam">flushslam</string>

  <string name="bulge">bulge</string>
  <string name="blockhead">blockhead</string>
  <string name="inflate">inflate</string>
  <string name="deflate">deflate</string>
  <string name="swirlspot">swirlspot</string>
  <string name="doublebulge">doublebulge</string>
  <string name="bulgeswap">bulgeswap</string>
  <string name="smush">smush</string>

  <string name="create_slamzoom">CREATE</string>
  <string name="zero_state_message">select an effect</string>

  <string name="action_cycle">cycle</string>
  <string name="action_add_text">add text</string>
  <string name="action_change_hotspot">change hotspot</string>
  <string name="action_change_image">change image</string>
  <string name="action_save">save</string>
  <string name="action_share">share</string>

  <string name="action_ok">ok</string>
  <string name="action_done">done</string>

  <string name="unlock_pack_dialog_title">Effect is Locked!</string>
  <string name="unlock_pack_dialog_message" formatted="false">
    %s must be unlocked to share %s</string>
  <string name="buy_ok">UNLOCK</string>
  <string name="buy_cancel">MAYBE LATER</string>

  <string name="permissions_warning_dialog_title">Need Storage Permission to Share!</string>
  <string name="permissions_warning_dialog_message">
    If you do not see the option to allow storage permission,
    you must go to "Settings > Apps > Slamzoom > App permissions" to enable permission.
  </string>
  <string name="ok">OK</string>
</resources>
