<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_change_image"
      android:icon="@drawable/ic_menu_change_image"
      android:title="@string/action_change_image"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_change_hotspot"
      android:icon="@drawable/ic_menu_change_hotspot"
      android:title="@string/action_change_hotspot"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_add_text"
      android:icon="@drawable/ic_menu_add_text"
      android:title="@string/action_add_text"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_share"
      android:icon="@drawable/ic_menu_share"
      android:title="@string/action_share"
      app:showAsAction="always">
    <menu>
      <item
          android:id="@+id/action_share_gif"
          android:icon="@drawable/ic_menu_share"
          android:title="Share GIF" />
      <item
          android:id="@+id/action_share_video"
          android:icon="@drawable/ic_menu_share"
          android:title="Share Video" />
      <item
          android:id="@+id/action_save_gif"
          android:icon="@drawable/ic_menu_save"
          android:title="Save GIF" />
      <item
          android:id="@+id/action_save_video"
          android:icon="@drawable/ic_menu_save"
          android:title="Save Video" />
    </menu>
  </item>
  <item
      android:id="@+id/action_ok"
      android:icon="@drawable/ic_menu_ok"
      android:title="@string/action_ok"
      app:showAsAction="ifRoom"/>
</menu>